--- a/04_scheff-et-al-2022.ipynb
+++ b/04_scheff-et-al-2022.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,7 +629,11 @@
    "metadata": {},
    "source": [
     "# CESM2 Constant VPD\n",
-    "Create maps of the same variables as Scheff et al. (2022) so that I can compare the response of fixing VPD"
+    "Create maps of the same variables as Scheff et al. (2022) so that I can compare the response of fixing VPD\n",
+    "\n",
+    "* PRECT = precip\n",
+    "* QRUNOFF = runoff\n",
+    "* QFLX_EVAP_TOT = evap ?"
    ]
   },
   {
@@ -708,6 +712,20 @@
     "\n",
     "tslice = slice('0049-01','0099-12')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -730,5 +748,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
