Mass commit of old changes

--- a/06_dereho-coup-pi-som.ipynb
+++ b/06_dereho-coup-pi-som.ipynb
@@ -22,7 +22,10 @@
   {
    "cell_type": "markdown",
    "id": "eee646ee-090d-4375-9c40-bbc8c49b3a9e",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "# Setup"
    ]
@@ -150,10 +153,12 @@
   {
    "cell_type": "markdown",
    "id": "a3d4d724-6aec-4234-a843-e1d8a699a236",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
-    "# Dictionaries and constants\n",
-    "## `COUP0000_PI_SOM`"
+    "# Dictionaries and constants"
    ]
   },
   {
@@ -204,10 +209,12 @@
   {
    "cell_type": "markdown",
    "id": "0a883431-9f7d-4d2d-bc7d-26be1f486ba3",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
-    "# Get output\n",
-    "## `COUP0000_PI_SOM`"
+    "# Get output"
    ]
   },
   {
@@ -274,7 +281,10 @@
   {
    "cell_type": "markdown",
    "id": "13b934b6-645a-4247-8ae5-e2dd4cc68ba6",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "# Functions"
    ]
@@ -375,7 +385,6 @@
    "cell_type": "markdown",
    "id": "7459125f-26b5-44a6-bfde-e80cae65ef6a",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -431,7 +440,6 @@
    "cell_type": "markdown",
    "id": "6d494f98-222a-4816-bd13-78d74e45c13a",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -521,7 +529,6 @@
    "cell_type": "markdown",
    "id": "cbefff45-8a75-4952-afbf-0a9d6acf7730",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -575,18 +582,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0ccc0da2-83ea-41af-8202-a4ab038f6769",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "df0e17cc-5244-49d9-8615-050b81b678d3",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -640,18 +638,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "483da53f-9ad8-42e7-a1bd-32375da440dd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "0c8a16fc-ee95-4554-98ed-da5494dfd37f",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -703,14 +692,6 @@
    "source": [
     "plot_tseries('FCTR', 'lnd')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c8c00229-8e7d-491e-a23a-c8fb8a685288",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -795,7 +776,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.11.6"
-  }
+  },
+  "toc-autonumbering": true
  },
  "nbformat": 4,
  "nbformat_minor": 5
